# HCP

./: .gitignore  EML.py  Pipfile  README.md  XMLparser.py  csvWriter.py  csv_write.py  eml_types.py  main.py  odt.py  process_info.py  protocol_checks.py  pyproject.toml  unit.py  xml_parser.py
.github/workflows/: checks.yml  test.yml
data/: EditedEml.xml  normalTestEml.xml  zip_to_neighbourhood_2024.parquet
oude code/: process_info.py
src/: csv_write.py  eml.py  eml_types.py  main.py  neighbourhood.py  odt.py  protocol_checks.py  xml_parser.py
src/hcp/: __init__.py  cli.py  csv_write.py  eml.py  eml_types.py  main.py  neighbourhood.py  odt.py  protocol_checks.py  xml_parser.py
test/: test_e2e.py  test_eml.py  test_neighbourhood.py  test_odt.py  test_protocol_checks.py
test/data/FAKE_TEST_DATA_TK2023_DORDRECHT/: Fake_test_data_Telling_TK2023_gemeente_Dordrecht.eml.xml
test/data/TK2023_DORDRECHT/: Model_Na31-1.odt  Telling_TK2023_gemeente_Dordrecht.eml.xml
test/data/e2e/: Fake_test_data_Telling_EP2024_gemeente_Steenwijkerland.eml.xml  Telling_EP2024_gemeente_Steenwijkerland.eml.xml
test/data/emls/: empty_party_name.eml.xml  invalid_eml_id.eml.xml
test/data/neighbourhood_files/: invalid.csv  valid.csv  valid.parquet
test/data/odts/1ru_ep/: Model_Na31-1.odt  Model_Na31-2.odt
test/data/odts/3ru/: Model_Na31-1.odt  Model_Na31-2.odt
test/data/odts/3ru_spread/: Model_Na31-1.odt
test/data/odts/3ru_tk25/: Model_Na31-2.odt
test/data/odts/3ru_zipless/: Model_Na31-1.odt  Model_Na31-2.odt
test/protocol_checks/: test_protocol_checks.py  test_switched_candidates.py  test_switched_candidates_implementation.py
(+2 files in other folders)
