[project]
name = "hcp"
version = "1.0"
description = "Hulpmiddel controle protocol. Scripts ter ondersteuning van onderdeel A van het Controleprotocol Centraal Stembureau."
requires-python = "~= 3.12.0"
readme = "README.md"
dependencies = ["defusedxml == 0.7.1", "polars == 0.20.18"]
license = "EUPL-1.2"

[dependency-groups]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.sdist.force-include]
"data/zip_to_neighbourhood_2024.parquet" = "data/zip_to_neighbourhood_2024.parquet"

[tool.hatch.build.targets.wheel.force-include]
"data/zip_to_neighbourhood_2024.parquet" = "data/zip_to_neighbourhood_2024.parquet"

[project.scripts]
hcp = "hcp.cli:start"